5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1807_2566.log
== TEST (2019-06-11 16:13:17) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
print(C)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:13:18) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
print(C)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:13:19) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
print(C)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:13:22) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:13:27) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
print(C)

-- EXECUTION TIME:
2.9279
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 3, in <module>
    b = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:13:29) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
print(C)

-- EXECUTION TIME:
4.40178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 3, in <module>
    b = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:13:29) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
print(C)

-- EXECUTION TIME:
4.7269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 3, in <module>
    b = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:25:46) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	if a[i] == 3:
		c[1] += 1
	if a[i] == 4:
		c[2] += 1
	if a[i] == 5:
		c[3] += 1
	if a[i] == 6:
		c[4] += 1
	if a[i] == 7:
		c[5] += 1
z = c[i]/size(a)
print(z)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:30:02) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	if a[i] == 3:
		c[1] += 1
	if a[i] == 4:
		c[2] += 1
	if a[i] == 5:
		c[3] += 1
	if a[i] == 6:
		c[4] += 1
	if a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	l[z] = (l[z]/size(a))*100
print(round(l[z],1))


-- EXECUTION TIME:
0.968001
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 3, in <module>
    b = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:30:05) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	if a[i] == 3:
		c[1] += 1
	if a[i] == 4:
		c[2] += 1
	if a[i] == 5:
		c[3] += 1
	if a[i] == 6:
		c[4] += 1
	if a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	l[z] = (l[z]/size(a))*100
print(round(l[z],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:31:01) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	if a[i] == 3:
		c[1] += 1
	if a[i] == 4:
		c[2] += 1
	if a[i] == 5:
		c[3] += 1
	if a[i] == 6:
		c[4] += 1
	if a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	l[z] = (l[z]/size(c))*100
print(round(l[z],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:31:13) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	if a[i] == 3:
		c[1] += 1
	if a[i] == 4:
		c[2] += 1
	if a[i] == 5:
		c[3] += 1
	if a[i] == 6:
		c[4] += 1
	if a[i] == 7:
		c[5] += 1
for z in range(size(a)):
	l[z] = (l[z]/size(c))*100
print(round(l[z],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:31:17) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	if a[i] == 3:
		c[1] += 1
	if a[i] == 4:
		c[2] += 1
	if a[i] == 5:
		c[3] += 1
	if a[i] == 6:
		c[4] += 1
	if a[i] == 7:
		c[5] += 1
for z in range(size(a)):
	l[z] = (l[z]/size(c))*100
print(round(l[z],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:33:01) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	l[z] = (l[z]/size(a))*100
print(round(l[z],1))


-- EXECUTION TIME:
1.23434
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2566/main.py", line 18, in <module>
    l[z] = (l[z]/size(a))*100
NameError: name 'l' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:33:03) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	l[z] = (l[z]/size(a))*100
print(round(l[z],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:33:30) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	c[z] = (c[z]/size(a))*100
print(round(c[z],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:33:42) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(a)):
	c[z] = (c[z]/size(a))*100
print(round(c[z],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:34:31) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
print(c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:35:17) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	c[z] = (c[z]/size(a))*100
	print(round(c[z],1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:35:51) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	c[z] = (c[z]/size(a))*100
	c[z] = round(c[z],1)
print(c[z])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:36:18) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	c[z] = (c[z]/size(a))*100
	c[z] = round(c[z],1)
	print(c[z])


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:36:27) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	c[z] = (c[z]/size(a))*100
	c[z] = round(c[z],1)
	print(c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:36:37) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	c[z] = (c[z]/size(a))*100
	c[z] = round(c[z],1)
print(c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:36:44) 
-- CODE:
from numpy import*
a = array(eval(input()))
c = zeros(6)
for i in range(size(a)):
	if a[i] == 2:
		c[0] += 1
	elif a[i] == 3:
		c[1] += 1
	elif a[i] == 4:
		c[2] += 1
	elif a[i] == 5:
		c[3] += 1
	elif a[i] == 6:
		c[4] += 1
	elif a[i] == 7:
		c[5] += 1
for z in range(size(c)):
	c[z] = (c[z]/size(a))*100
	c[z] = round(c[z],1)
print(c)


-- EXECUTION TIME:
1.00255
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
